--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,6 @@
 
 {% block content %}
 
-
 <div class="hero">
 	<!-- Hero card content -->
 	<div class="hero-card">
@@ -157,12 +156,17 @@
 
 			<!-- Testimonial 1 -->
 			<div class="carousel-item active">
-				<div class="card bg-light border rounded mx-auto" style="max-width: 600px;">
+				<div class="card bg-light test-card border rounded mx-auto">
 					<div class="card-body text-center">
 						<p class="fst-italic mb-4">
-							“Brady CFO significantly enhanced our liquidity and secured additional financing needed for growth.
-							They’re
-							now helping optimize our pricing strategy without harming customer relationships.”
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui placeat atque, dolor perferendis magni
+							officia harum tenetur voluptatem dolorum sint pariatur laudantium voluptas quas voluptatum vel voluptates
+							earum nemo aliquid delectus accusantium eligendi totam maiores dolore. Rerum eius omnis suscipit ut ullam
+							quam voluptatum soluta cupiditate, architecto ipsa nesciunt aliquam, totam a numquam accusamus fugiat
+							necessitatibus iure optio corporis, temporibus officiis consectetur? Sit eos aliquid possimus facilis
+							consequatur consectetur illo in adipisci. Placeat provident architecto, tempora nihil neque ipsa error
+							autem rerum debitis nam optio libero ex. Quia commodi placeat alias laboriosam doloremque ab itaque
+							laborum ut, at unde perferendis!
 						</p>
 						<h5 class="fw-bold mb-1">Casey Hollnagel</h5>
 						<p class="text-muted mb-0">Vertical Foods LLC</p>
@@ -172,12 +176,16 @@
 
 			<!-- Testimonial 2 -->
 			<div class="carousel-item">
-				<div class="card bg-light border rounded mx-auto" style="max-width: 600px;">
+				<div class="card bg-light test-card border rounded mx-auto">
 					<div class="card-body text-center">
 						<p class="fst-italic mb-4">
-							“Working with Mason over the past 4 months has taught me more about myself personally and professionally
-							than
-							I ever imagined. He truly values people and long-term growth.”
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque cumque nulla, assumenda maiores
+							inventore, consectetur atque a delectus blanditiis iste necessitatibus error! Rerum sunt earum deserunt
+							qui aliquid alias, quasi nobis quia, repudiandae officiis porro. Libero ut tempore eaque saepe vitae,
+							nihil animi debitis soluta neque adipisci laboriosam aliquam quae voluptatibus eos veritatis. Officiis
+							aperiam officia, ullam qui harum dignissimos aut! Animi voluptate harum porro deserunt alias unde nemo qui
+							dolores ea at! Neque aperiam natus quos, reiciendis quidem vel ab nemo unde. Soluta commodi eligendi nam
+							voluptates minus vel similique, omnis, doloribus consequatur quod sunt, numquam iusto! Hic, dolores.
 						</p>
 						<h5 class="fw-bold mb-1">Hunter Robertson</h5>
 						<p class="text-muted mb-0">Director of Finance, Tamarack Grove Engineering</p>
