--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -29,47 +29,14 @@
 
 					<!-- 3a) Centered links -->
 					<ul class="navbar-nav mx-auto">
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="solutionsDropdown" data-toggle="dropdown">
-								Solutions
-							</a>
-							<ul class="dropdown-menu" aria-labelledby="solutionsDropdown">
-								<li>
-									<a class="dropdown-item d-flex align-items-center" href="/solutions/financial-reporting">
-										<img src="https://unpkg.com/@primer/octicons@16.2.0/build/svg/graph-16.svg" width="16" height="16"
-											class="mr-2" alt="" aria-hidden="true">
-										Financial Reporting
-									</a>
-								</li>
-
-								<div class="dropdown-divider dropdown-divider-center"></div>
-
-								<li>
-									<a class="dropdown-item d-flex align-items-center" href="/solutions/budget-planning">
-										<img src="https://unpkg.com/@primer/octicons@16.2.0/build/svg/calendar-16.svg" width="16"
-											height="16" class="mr-2" alt="" aria-hidden="true">
-										Budget Planning
-									</a>
-								</li>
-
-								<div class="dropdown-divider dropdown-divider-center"></div>
-
-								<li>
-									<a class="dropdown-item d-flex align-items-center" href="/solutions/cash-flow-analysis">
-										<img src="https://unpkg.com/@primer/octicons@16.2.0/build/svg/graph-line-16.svg" width="16"
-											height="16" class="mr-2" alt="" aria-hidden="true">
-										Cash Flow Analysis
-									</a>
-								</li>
-
-								<div class="dropdown-divider dropdown-divider-center"></div>
-							</ul>
+						<li class="nav-item">
+							<a class="nav-link" href="/faq">FAQ</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/about">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/careers">Pricing</a>
+							<a class="nav-link" href="/pricing">Pricing</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/careers">Careers</a>
@@ -89,15 +56,27 @@
 		{% endblock %}
 	</main>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
+	<footer class="footer-bg text-light py-4 mt-auto">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<p>© 2025 Crescent Services LLC. All rights reserved. <a href="/t_and_c/" class="text-light">Terms and
+							Conditions</a></p>
+				</div>
+				<div class="col-md-6 text-md-end">
+					<ul class="list-inline mb-0">
+						<li class="list-inline-item"><a href="/" class="text-light">Home</a>
+						</li>
+						<li class="list-inline-item"><a href="/about" class="text-light">About Us</a></li>
+						<li class="list-inline-item"><a href="/contact" class="text-light">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	{% block scripts %}{% endblock %}
 </body>
 
