--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,16 +18,13 @@
 			<div class="container px-4">
 				<a class="navbar-brand" href="/">My Logo</a>
 
-				<!-- 2) Toggler for small screens -->
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
 					aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<!-- 3) Collapsible flex area -->
 				<div class="collapse navbar-collapse" id="mainNav">
 
-					<!-- 3a) Centered links -->
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
 							<a class="nav-link" href="/faq">FAQ</a>
@@ -43,11 +40,9 @@
 						</li>
 					</ul>
 
-					<!-- 3b) Right-aligned CTA -->
-					<a class="btn btn-dark btn-md rounded-pill" href="/contact">Contact Us</a>
-
-				</div><!-- /.collapse -->
-			</div><!-- /.container -->
+					<a class="btn contact-us-btn text-light btn-md rounded-pill" href="/contact">Contact Us</a>
+				</div>
+			</div>
 		</nav>
 	</header>
 
@@ -60,7 +55,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<p>© 2025 Crescent Services LLC. All rights reserved. <a href="/t_and_c/" class="text-light">Terms and
+					<p>© 2025 Mojo Advisors LLC. All rights reserved. <a href="/t_and_c/" class="text-light">Terms and
 							Conditions</a></p>
 				</div>
 				<div class="col-md-6 text-md-end">
@@ -74,7 +69,6 @@
 			</div>
 		</div>
 	</footer>
-
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	{% block scripts %}{% endblock %}
