--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,8 @@
 	<title>{% block title %}My Site{% endblock %}</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+		crossorigin="anonymous">
 	<link rel="stylesheet" href="/assets/css/main.css">
 	{% block head %}{% endblock %}
 </head>
@@ -16,10 +17,13 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-white p-3">
 			<div class="container px-4">
-				<a class="navbar-brand" href="/">My Logo</a>
+				<a class="navbar-brand" href="/">
+					<img src="/assets/images/mojo_logo.png" alt="Logo" height="40">
+				</a>
 
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
-					aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-toggle="collapse"
+					data-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
+					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
@@ -40,7 +44,8 @@
 						</li>
 					</ul>
 
-					<a class="btn contact-us-btn text-light btn-md rounded-pill" href="/contact">Contact Us</a>
+					<a class="btn contact-us-btn text-light btn-md rounded-pill"
+						href="/contact">Contact Us</a>
 				</div>
 			</div>
 		</nav>
@@ -55,15 +60,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<p>© 2025 Mojo Advisors LLC. All rights reserved. <a href="/t_and_c/" class="text-light">Terms and
+					<p>© 2025 Mojo Advisors LLC. All rights reserved. <a href="/t_and_c/"
+							class="text-light">Terms and
 							Conditions</a></p>
 				</div>
 				<div class="col-md-6 text-md-end">
 					<ul class="list-inline mb-0">
 						<li class="list-inline-item"><a href="/" class="text-light">Home</a>
 						</li>
-						<li class="list-inline-item"><a href="/about" class="text-light">About Us</a></li>
-						<li class="list-inline-item"><a href="/contact" class="text-light">Contact</a></li>
+						<li class="list-inline-item"><a href="/about" class="text-light">About
+								Us</a></li>
+						<li class="list-inline-item"><a href="/contact"
+								class="text-light">Contact</a></li>
 					</ul>
 				</div>
 			</div>
