--- a/src/index.njk
+++ b/src/index.njk
@@ -15,8 +15,9 @@
 		</h1>
 
 		<p class="fs-5 text-light mb-3" style="">
-			Transform each breath of fresh air into your own personal paradise. At Crescent, we promise landscapes that are
-			equal parts green and grand.
+			We act swiftly and strategically, leveraging
+			sharp judgment and disciplined execution to seize fleeting opportunities that others may miss or
+			lack the expertise to pursue
 		</p>
 
 		<div>
@@ -40,7 +41,8 @@
 				<img src="/assets/logos/subway.png" alt="Company 1" class="img-fluid company-logo">
 			</div>
 			<div class="col-auto mb-3">
-				<img src="/assets/logos/bis_america_advis.png" alt="Company 2" class="img-fluid company-logo"">
+				<img src="/assets/logos/bis_america_advis.png" alt="Company 2"
+					class="img-fluid company-logo"">
 			</div>
 			<div class=" col-auto mb-3">
 				<img src="/assets/logos/oceanclub.png" alt="Company 3" class="img-fluid company-logo"">
@@ -55,7 +57,7 @@
 	</div>
 </section>
 
-<section class="py-5">
+<section class="py-5 g-sec">
 	<div class="container text-center mb-5">
 		<h2 class="fw-bold services-heading">Expert Guidance so you can focus on growth</h2>
 	</div>
@@ -65,24 +67,30 @@
 			<!-- Growth/strategy -->
 			<div class="col-md-6 service-point">
 				<div class="d-flex align-items-center mb-2">
-					<img src="/assets/icons/graph-up.svg" alt="Growth" class="svg-icon me-2 text-primary">
+					<img src="/assets/icons/graph-up.svg" alt="Growth"
+						class="svg-icon me-2 text-primary">
 					<h5 class="fw-light mb-0">Strategic Growth</h5>
 				</div>
 				<p class="mb-0">
-					We hire CFOs from top investment banks, PE & VC firms, and consulting firms to ensure that you are paired with
-					someone that understands your business and is well-versed in the support you are looking for.
+					We hire CFOs from top investment banks, PE & VC firms, and consulting firms to
+					ensure that you are paired with
+					someone that understands your business and is well-versed in the support you are
+					looking for.
 				</p>
 			</div>
 
 			<!-- Forecasting/modeling -->
 			<div class="col-md-6 service-point">
 				<div class="d-flex align-items-center mb-2">
-					<img src="/assets/icons/calculator.svg" alt="Forecasting" class="svg-icon me-2 text-success">
+					<img src="/assets/icons/calculator.svg" alt="Forecasting"
+						class="svg-icon me-2 text-success">
 					<h5 class="fw-light mb-0">Financial Modeling</h5>
 				</div>
 				<p class="mb-0">
-					Access insightful forecasts and collaborate on strategic moves, leveraging our extensive experience with
-					hundreds of companies like yours. We’ll strategize and model the impact of various scenarios to help guide
+					Access insightful forecasts and collaborate on strategic moves, leveraging our
+					extensive experience with
+					hundreds of companies like yours. We’ll strategize and model the impact of
+					various scenarios to help guide
 					your business in the right direction.
 				</p>
 			</div>
@@ -90,24 +98,30 @@
 			<!-- Cash management -->
 			<div class="col-md-6 service-point">
 				<div class="d-flex align-items-center mb-2">
-					<img src="/assets/icons/currency-dollar.svg" alt="Cash Management" class="svg-icon me-2 text-warning">
+					<img src="/assets/icons/currency-dollar.svg" alt="Cash Management"
+						class="svg-icon me-2 text-warning">
 					<h5 class="fw-light mb-0">Cash & Liquidity</h5>
 				</div>
 				<p class="mb-0">
-					Need to stretch your cash? We’ve got your back. We’ll help you run a tight financial ship by implementing cash
-					management strategies and providing a clear, insightful view of your spending to maximize your efficiency.
+					Need to stretch your cash? We’ve got your back. We’ll help you run a tight
+					financial ship by implementing cash
+					management strategies and providing a clear, insightful view of your spending to
+					maximize your efficiency.
 				</p>
 			</div>
 
 			<!-- Risk & compliance -->
 			<div class="col-md-6 service-point">
 				<div class="d-flex align-items-center mb-2">
-					<img src="/assets/icons/shield-check.svg" alt="Risk & Compliance" class="svg-icon me-2 text-info">
+					<img src="/assets/icons/shield-check.svg" alt="Risk & Compliance"
+						class="svg-icon me-2 text-info">
 					<h5 class="fw-light mb-0">Risk & Compliance</h5>
 				</div>
 				<p class="mb-0">
-					Elevate your pitch with an experienced CFO, not only to craft a personalized financial model, but also to help
-					you maximize your valuation. We guide you through the process and help you choose the right form of capital so
+					Elevate your pitch with an experienced CFO, not only to craft a personalized
+					financial model, but also to help
+					you maximize your valuation. We guide you through the process and help you
+					choose the right form of capital so
 					you can navigate your fundraise or M&A process confidently.
 				</p>
 			</div>
@@ -129,13 +143,16 @@
 			<div class="text-center">
 				<h2 class="fw-bold mb-3 biz-heading">Get Business Insights from the Experts</h2>
 				<h5 class="mb-4 text-muted">
-					Join us on <em>Brewing Business</em> as we explore the stories, strategies, and lessons that drive
-					success for companies in the $5M–$75M revenue range.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos officiis
+					voluptatibus quae ipsam saepe aperiam necessitatibus quod incidunt suscipit,
+					natus et accusantium eligendi. Repellendus, beatae!
 				</h5>
 				<p class="mb-4">
-					From navigating cash flow challenges to unlocking growth opportunities, our podcast delivers actionable advice
-					straight from business leaders and trusted advisors. Discover how to create a more profitable and valuable
-					business—one conversation at a time.
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam id cum
+					architecto aliquid illum, ipsum distinctio laborum hic, alias quo voluptas natus
+					autem eos ex molestias? Dicta ab ipsa iure repellat, delectus excepturi iste
+					corporis ea nulla nisi eius, eveniet neque eum quo dolorem temporibus quos amet
+					aliquam ipsam? Ullam!
 				</p>
 				<a href="/" class="btn btn-dark btn-md biz-btn">Learn more</a>
 
@@ -159,13 +176,20 @@
 				<div class="card bg-light test-card border rounded mx-auto">
 					<div class="card-body text-center">
 						<p class="fst-italic mb-4">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui placeat atque, dolor perferendis magni
-							officia harum tenetur voluptatem dolorum sint pariatur laudantium voluptas quas voluptatum vel voluptates
-							earum nemo aliquid delectus accusantium eligendi totam maiores dolore. Rerum eius omnis suscipit ut ullam
-							quam voluptatum soluta cupiditate, architecto ipsa nesciunt aliquam, totam a numquam accusamus fugiat
-							necessitatibus iure optio corporis, temporibus officiis consectetur? Sit eos aliquid possimus facilis
-							consequatur consectetur illo in adipisci. Placeat provident architecto, tempora nihil neque ipsa error
-							autem rerum debitis nam optio libero ex. Quia commodi placeat alias laboriosam doloremque ab itaque
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+							placeat atque, dolor perferendis magni
+							officia harum tenetur voluptatem dolorum sint pariatur
+							laudantium voluptas quas voluptatum vel voluptates
+							earum nemo aliquid delectus accusantium eligendi totam maiores
+							dolore. Rerum eius omnis suscipit ut ullam
+							quam voluptatum soluta cupiditate, architecto ipsa nesciunt
+							aliquam, totam a numquam accusamus fugiat
+							necessitatibus iure optio corporis, temporibus officiis
+							consectetur? Sit eos aliquid possimus facilis
+							consequatur consectetur illo in adipisci. Placeat provident
+							architecto, tempora nihil neque ipsa error
+							autem rerum debitis nam optio libero ex. Quia commodi placeat
+							alias laboriosam doloremque ab itaque
 							laborum ut, at unde perferendis!
 						</p>
 						<h5 class="fw-bold mb-1">Casey Hollnagel</h5>
@@ -179,16 +203,24 @@
 				<div class="card bg-light test-card border rounded mx-auto">
 					<div class="card-body text-center">
 						<p class="fst-italic mb-4">
-							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque cumque nulla, assumenda maiores
-							inventore, consectetur atque a delectus blanditiis iste necessitatibus error! Rerum sunt earum deserunt
-							qui aliquid alias, quasi nobis quia, repudiandae officiis porro. Libero ut tempore eaque saepe vitae,
-							nihil animi debitis soluta neque adipisci laboriosam aliquam quae voluptatibus eos veritatis. Officiis
-							aperiam officia, ullam qui harum dignissimos aut! Animi voluptate harum porro deserunt alias unde nemo qui
-							dolores ea at! Neque aperiam natus quos, reiciendis quidem vel ab nemo unde. Soluta commodi eligendi nam
-							voluptates minus vel similique, omnis, doloribus consequatur quod sunt, numquam iusto! Hic, dolores.
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+							Doloremque cumque nulla, assumenda maiores
+							inventore, consectetur atque a delectus blanditiis iste
+							necessitatibus error! Rerum sunt earum deserunt
+							qui aliquid alias, quasi nobis quia, repudiandae officiis porro.
+							Libero ut tempore eaque saepe vitae,
+							nihil animi debitis soluta neque adipisci laboriosam aliquam
+							quae voluptatibus eos veritatis. Officiis
+							aperiam officia, ullam qui harum dignissimos aut! Animi
+							voluptate harum porro deserunt alias unde nemo qui
+							dolores ea at! Neque aperiam natus quos, reiciendis quidem vel
+							ab nemo unde. Soluta commodi eligendi nam
+							voluptates minus vel similique, omnis, doloribus consequatur
+							quod sunt, numquam iusto! Hic, dolores.
 						</p>
 						<h5 class="fw-bold mb-1">Hunter Robertson</h5>
-						<p class="text-muted mb-0">Director of Finance, Tamarack Grove Engineering</p>
+						<p class="text-muted mb-0">Director of Finance, Tamarack Grove
+							Engineering</p>
 					</div>
 				</div>
 			</div>
@@ -198,11 +230,13 @@
 		</div>
 
 		<!-- Controls -->
-		<button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+		<button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
+			data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden"></span>
 		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+		<button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
+			data-bs-slide="next">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="visually-hidden"></span>
 		</button>
