--- a/src/pricing.njk
+++ b/src/pricing.njk
@@ -15,9 +15,9 @@
 		</h1>
 
 		<p class="fs-5 text-light mb-3" style="">
-			Transform each breath of fresh air into your own personal paradise. At Crescent, we promise
-			landscapes that are
-			equal parts green and grand.
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officia est, eaque perspiciatis
+			fugit consectetur quibusdam eligendi maiores harum exercitationem adipisci! Aliquid officiis
+			dolor alias?
 		</p>
 
 		<div>
